<resources>
    <string name="app_name">VitrinApp</string>
    <string name="search_hint">Ürün veya vitrin ara</string>
    <string name="txMoneyNew">%d TL</string>
    <string name="txNewOld">%d TL</string>
    <string name="new_items">EN YENİ ÜRÜNLER</string>
    <string name="all_items">TÜMÜ ></string>
    <string name="collections">KOLEKSİYONLAR</string>
    <string name="editor_vitrin">EDİTÖR SEÇİMİ VİTRİNLER</string>
    <string name="new_vitrin">EN YENİ VİTRİNLER</string>
    <string name="categories">KATEGORİLER</string>
    <string name="btn_vitrin">VİTRİNE GİT</string>
    <string name="item">%d ÜRÜN</string>
    <string name="follow">TAKİP ET</string>
</resources>
