<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay">

            <FrameLayout
                android:id="@+id/toolbar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

                <com.ferfalk.simplesearchview.SimpleSearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:hint="@string/search_hint"
                    app:type="card"
                    app:voiceSearch="true" />
            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="false"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:id="@+id/linLoad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:visibility="invisible">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <androidx.viewpager.widget.ViewPager
                                        android:id="@+id/viewPager"
                                        android:layout_width="match_parent"
                                        android:layout_height="180dp">

                                    </androidx.viewpager.widget.ViewPager>

                                    <com.google.android.material.tabs.TabLayout
                                        android:id="@+id/indicator"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerHorizontal="true"
                                        android:layout_marginTop="130dp"
                                        app:tabBackground="@drawable/indicator_selector"
                                        app:tabGravity="center"
                                        app:tabIndicatorHeight="0dp" />
                                </RelativeLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:id="@+id/linNewItems"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="10dp"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:id="@+id/textView3"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/new_items" />

                                        <TextView
                                            android:id="@+id/textView4"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="end"
                                            android:text="@string/all_items" />
                                    </LinearLayout>

                                    <androidx.recyclerview.widget.RecyclerView
                                        android:id="@+id/recycNew"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="6dp"
                                        android:layout_marginRight="6dp"
                                        android:layoutAnimation="@anim/layout_animation_slide_right">

                                    </androidx.recyclerview.widget.RecyclerView>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:background="@color/light_grey"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/txCat"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="10dp"
                                        android:text="@string/categories" />

                                    <androidx.recyclerview.widget.RecyclerView
                                        android:id="@+id/recycCat"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_margin="5dp"
                                        android:layoutAnimation="@anim/layout_animation_slide_right">

                                    </androidx.recyclerview.widget.RecyclerView>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:id="@+id/linCol"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="10dp"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:id="@+id/textView5"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/collections" />

                                        <TextView
                                            android:id="@+id/textView6"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="end"
                                            android:text="@string/all_items" />
                                    </LinearLayout>

                                    <androidx.recyclerview.widget.RecyclerView
                                        android:id="@+id/recycCol"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="5dp"
                                        android:layout_marginRight="5dp"
                                        android:layout_marginBottom="5dp"
                                        android:layoutAnimation="@anim/layout_animation_slide_right">

                                    </androidx.recyclerview.widget.RecyclerView>

                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/linVitBack"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">

                                        <ImageView
                                            android:id="@+id/imgVitBack"
                                            android:layout_width="match_parent"
                                            android:layout_height="320dp"
                                            android:scaleType="centerCrop"
                                            android:tint="#BF000000"
                                            tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

                                        <LinearLayout
                                            android:id="@+id/linEditorVit"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_margin="10dp"
                                            android:orientation="horizontal">

                                            <TextView
                                                android:id="@+id/textView7"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/editor_vitrin"
                                                android:textColor="@android:color/white" />

                                            <TextView
                                                android:id="@+id/textView8"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:gravity="end"
                                                android:text="@string/all_items"
                                                android:textColor="@android:color/white" />
                                        </LinearLayout>

                                        <androidx.viewpager.widget.ViewPager
                                            android:id="@+id/vPagerVitrin"
                                            android:layout_width="wrap_content"
                                            android:layout_height="300dp"
                                            android:layout_marginTop="15dp"
                                            android:layout_marginBottom="10dp"/>

                                    </RelativeLayout>

                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/linVitNew"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="10dp"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:id="@+id/linNewVit"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="10dp"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:id="@+id/txVitrin"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/new_vitrin" />

                                        <TextView
                                            android:id="@+id/txAll"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="end"
                                            android:text="@string/all_items" />
                                    </LinearLayout>

                                    <androidx.viewpager.widget.ViewPager
                                        android:id="@+id/vPagerNew"
                                        android:layout_width="wrap_content"
                                        android:layout_height="265dp" />
                                </LinearLayout>

                            </LinearLayout>

                        </RelativeLayout>

                    </LinearLayout>

                </RelativeLayout>
            </ScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadAnim"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/load" />
</RelativeLayout>